--- a/app/styles/components/map/layer-management.scss
+++ b/app/styles/components/map/layer-management.scss
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: space-between;
   margin: 10px 0 0;
+  padding-left: 30px;
+  padding-right: 23px;
 }
 
 .layerButton {
