--- a/app/styles/components/submenu.scss
+++ b/app/styles/components/submenu.scss
@@ -6,18 +6,17 @@
     flex-direction: column;
     display: flex;
     height: 100%;
-    padding: 10px 15px;
+    padding: 10px 0;
 
     .header {
       align-items: center;
       justify-content: space-between;
       display: flex;
       padding-bottom: 15px;
-      margin-left: 20px;
+      margin-left: 10px;
       margin-right: 22px;
 
       @media #{$mq-tablet} {
-        margin: 0;
         padding-top: 24px;
         flex-direction: row;
       }
@@ -75,14 +74,13 @@
       -webkit-overflow-scrolling: touch;
       height: calc(100% - 108px);
       overflow-y: auto;
-      padding: 15px 20px;
+      padding: 15px 0;
 
       @media #{$mq-tablet} {
         height: auto;
         margin: 10px 0 0;
         max-height: none;
         overflow-y: visible;
-        padding: 15px 20px;
       }
     }
   }
