Add variables for padding and fix mobile padding, add scroll to result-list

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -12,6 +12,10 @@ $max-map-footer-height: 485px;
 $offset-panel-control-mobile: 108px;
 $offset-panel-control: 20px;
 
+$menu-left-padding: 30px;
+$menu-right-padding: 40px;
+$menu-mobile-left-padding: 20px;
+$menu-mobile-right-padding: 30px;
 
 $header-height-mobile: 60px;
 $header-height: 95px;
