--- a/app/styles/components/map/item-list.scss
+++ b/app/styles/components/map/item-list.scss
@@ -43,7 +43,7 @@
   flex-wrap: wrap;
   position: relative;
   width: 100%;
-  padding-left: 30px;
+  padding-left: $menu-left-padding;
   padding-right: 12px;
 
   &:not(:first-child) {
