--- a/app/styles/components/map/layer-management.scss
+++ b/app/styles/components/map/layer-management.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin: 10px 0 0;
-  padding-left: 30px;
+  padding-left: $menu-left-padding;
   padding-right: 23px;
 }
 
