--- a/app/styles/rightControlPanel/basemap-panel.scss
+++ b/app/styles/rightControlPanel/basemap-panel.scss
@@ -3,7 +3,7 @@
 .basemapsPanel {
   padding-bottom: 20px;
   font-size: $font-size-xs-small;
-  padding-right: 40px;
+  padding-right: $menu-right-padding;
 
   @media #{mq-tablet} {
     font-size: $font-size-small;
