Add Mobile left expand for leyend and miniglobe

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -24,6 +24,7 @@ $vessel-info-height: 70px;
 
 $map-panels-width: 320px;
 $leyend-width: 160px;
+$leyend-mobile-width: 30%;
 $control-panel-left-offset: 14px;
 
 
@@ -86,6 +87,7 @@ $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
 
 $color-base: $color-1;
+$color-secondary: $color-13;
 $color-button-primary: $color-31;
 $color-mid-blue: $color-8;
 $color-white: $color-4;
