--- a/app/styles/components/miniGlobe.scss
+++ b/app/styles/components/miniGlobe.scss
@@ -1,50 +1,52 @@
 @import '../settings';
 
 .miniGlobe {
-  display: none;
-
+  display: flex;
+  position: absolute;
+  bottom: 110px;
+  left: 0px;
+  height: 70px;
+  z-index: 9;
+  background-color: $color-base;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: $leyend-mobile-width;
 
   @media #{$mq-tablet} {
-    display: flex;
-    position: absolute;
-    bottom: 110px;
-    left: 0px;
     width: $leyend-width;
-    height: 76px;
-    z-index: 10;
-    background-color: $color-base;
+  }
+
+  .zone {
+    color: $color-white;
+    font-size: $font-size-xs-small;
+    line-height: $font-size-small;
+    width: 50%;
+  }
+
+  .svgContainer {
+    width: 50px;
+    height: 50px;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: center;
 
-    .zone {
-      color: $color-white;
-      font-size: $font-size-xs-small;
-      line-height: $font-size-small;
-      width: 50%;
+    .zoneMarker {
+      border: 1px solid red;
+      position: absolute;
+      z-index: 10;
+      flex: 1;
+      align-self: center;
     }
 
-    .svgContainer {
-      width: 50px;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-
-      .zoneMarker {
-        border: 1px solid red;
-        position: absolute;
-        z-index: 10;
-        flex: 1;
-        align-self: center;
-      }
-
-      .globeSvg {
-        position: absolute;
-        fill: $color-base;
-        stroke: $color-base;
-        background-color: $color-34;
-        border-radius: 50%;
-      }
+    .globeSvg {
+      position: absolute;
+      fill: $color-base;
+      stroke: $color-base;
+      background-color: $color-34;
+      border-radius: 50%;
     }
+  }
+
+  @media #{$mq-tablet} {
   }
 }
