--- a/app/styles/components/leyend.scss
+++ b/app/styles/components/leyend.scss
@@ -27,12 +27,16 @@
         margin-right: 20px;
       }
       font-size: $font-size-tiny;
+
+      @media #{$mq-tablet} {
+        font-size: $font-size-small;
+      }
     }
   }
 
   .leyendOvals {
     display: flex;
-    margin: 15px 10px;
+    margin: 10px;
 
     .lessFishingOval {
       background-color: $light-blue;
