--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -143,7 +143,8 @@
     font-size: $font-size-xs-small;
     font-weight: $font-weight-bold;
     text-transform: uppercase;
-    margin-left: 10px;
+    margin-left: 6px;
+    margin-bottom: -4px;
   }
 }
 
