--- a/app/styles/recentVessels/recent-vessels.scss
+++ b/app/styles/recentVessels/recent-vessels.scss
@@ -6,10 +6,11 @@
 }
 
 .historyContainer {
-  margin: 45px 0 0;
+  margin: 40px 0px 30px;
   overflow: auto;
   padding: 0 0 5px;
   position: relative;
+  max-height: 404px;
 
   &::after {
     background-image: linear-gradient(to bottom, rgba(4, 20, 56, 0), $color-2);
@@ -25,9 +26,11 @@
 }
 
 .historyList {
-  max-height: 225px;
   overflow-y: auto;
   padding: 0 0 8px;
+  .resultList{
+    max-height: none;
+  }
 }
 
 .pinned {
