--- a/app/styles/components/map/pinned-tracks.scss
+++ b/app/styles/components/map/pinned-tracks.scss
@@ -7,7 +7,7 @@
 
   @media #{$mq-tablet} {
     padding-left: $menu-left-padding;
-    padding-right: $menu-right-padding;
+    padding-right: 26px;
   }
 }
 
