--- a/app/styles/components/map/item-list.scss
+++ b/app/styles/components/map/item-list.scss
@@ -43,8 +43,35 @@
   flex-wrap: wrap;
   position: relative;
   width: 100%;
-  padding-left: $menu-left-padding;
+  padding-left: $menu-mobile-left-padding;
   padding-right: 12px;
+  @media #{$mq-tablet} {
+    padding-right: 32px;
+    padding-left: $menu-left-padding;
+
+    &._alignLeft {
+      padding-right: 4px;
+    }
+
+  }
+
+  &._noMobilePadding {
+    padding-right: 0;
+    padding-left: 0;
+
+    @media #{$mq-tablet} {
+      padding-right: 0;
+      padding-left: $menu-left-padding;
+    }
+  }
+
+  &._noMobileRightPadding {
+    padding-right: 0;
+
+    @media #{$mq-tablet} {
+      padding-right: 32px;
+    }
+  }
 
   &:not(:first-child) {
     margin: 5px 0 0;
@@ -52,12 +79,6 @@
 
   &._fixed {
     height: 40px;
-  }
-
-  &._alignLeft {
-    @media #{$mq-tablet} {
-      padding-right: 4px;
-    }
   }
 
   &.halfRow {
