--- a/app/styles/components/map/layer-management.scss
+++ b/app/styles/components/map/layer-management.scss
@@ -4,8 +4,12 @@
   display: flex;
   justify-content: space-between;
   margin: 10px 0 0;
-  padding-left: $menu-left-padding;
-  padding-right: 23px;
+  padding-right: 26px;
+  padding-left: $menu-mobile-left-padding;
+  @media #{$mq-tablet} {
+    padding-left: $menu-left-padding;
+    padding-right: $menu-right-padding;
+  }
 }
 
 .layerButton {
