--- a/app/styles/components/map/report-panel.scss
+++ b/app/styles/components/map/report-panel.scss
@@ -13,8 +13,7 @@
   @media #{$mq-tablet} {
     flex: 0 0 auto;
     margin-left: $control-panel-left-offset;
-    position: relative;
-    top: 0;
+    bottom: 0;
     width: calc(100% - #{$control-panel-left-offset});
   }
 
