--- a/app/styles/components/shared/accordion.scss
+++ b/app/styles/components/shared/accordion.scss
@@ -8,8 +8,13 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
-    padding-left: 30px;
     padding-right: 26px;
+    padding-left: $menu-mobile-left-padding;
+
+    @media #{$mq-tablet} {
+      padding-right: 45px;
+      padding-left: $menu-left-padding;
+    }
 
     &:not(:first-child) {
       padding-top: 20px;
