--- a/app/styles/components/shared/expand-item.scss
+++ b/app/styles/components/shared/expand-item.scss
@@ -19,7 +19,15 @@
     background-color: $color-mid-blue;
     margin-bottom: 10px;
     color: $color-white;
-    padding: 20px 35px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: $menu-mobile-left-padding;
+    padding-right: $menu-mobile-right-padding;
+    
+    @media #{$mq-tablet} {
+      padding-left: $menu-left-padding;
+      padding-right: $menu-mobile-right-padding;
+    }
     align-items: flex-start;
   }
 }
