--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -88,6 +88,7 @@ $hsla-end: hsla(0, 0%, 100%, .1);
 
 $color-base: $color-1;
 $color-secondary: $color-13;
+$color-highlight: $color-3;
 $color-button-primary: $color-31;
 $color-mid-blue: $color-8;
 $color-white: $color-4;
