--- a/app/styles/components/map/timebar.scss
+++ b/app/styles/components/map/timebar.scss
@@ -8,7 +8,7 @@
   z-index: 20;
 
   @media #{$mq-mobile-large} {
-    padding: 0 0 0 10px;
+    padding-left: 5px;
   }
 }
 
@@ -24,7 +24,7 @@
   @media #{$mq-mobile-large} {
     width: 20%;
     margin-left: 0;
-    width: 100px;
+    width: 98px;
     border-left: none;
   }
 }
@@ -32,7 +32,7 @@
 .timebarPlayback {
   text-align: center;
   width: 12%;
-  margin-left: 6px;
+  margin-top: 13px;
 
   @media #{$mq-mobile-large} {
     margin-left: 0;
@@ -53,9 +53,9 @@
     width: 40px;
 
     @media #{$mq-mobile-large} {
-      margin: 12px 5px;
-      height: 45px;
-      width: 45px;
+      margin: 15px 0;
+      height: 40px;
+      width: 40px;
     }
 
     &:focus {
