Move month ticks to the front on timeline and correct color of highlight

--- a/app/styles/components/map/timeline.scss
+++ b/app/styles/components/map/timeline.scss
@@ -87,7 +87,7 @@
 }
 
 .timelineInnerBrushSelection {
-  fill: $color-32;
+  fill: $color-fishing-hours-timebar;
   fill-opacity: 0.5;
   height: $timebar-height;
   stroke-width: 2;
