--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -82,6 +82,7 @@ $color-32: #081c4f;
 $color-33: #000f35;
 $color-34: #99d3e1;
 $color-35: #153b78;
+$color-36: #0A1E50;
 
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
@@ -93,6 +94,7 @@ $color-button-primary: $color-31;
 $color-mid-blue: $color-8;
 $color-white: $color-4;
 $color-fade-blue: rgba($color-31, 0.3);
+$color-fishing-hours-timebar: $color-36;
 
 // Layers colors
 
