Adjust play and speed button margins

--- a/app/styles/components/button.scss
+++ b/app/styles/components/button.scss
@@ -94,7 +94,11 @@
 .speedButton {
   outline: none;
   &.decrease {
+    margin-left: 5px;
     transform: rotate(180deg);
+    @media #{$mq-tablet} {
+      margin-left: 0;
+    }
   }
 }
 
