--- a/app/styles/components/map/timeline.scss
+++ b/app/styles/components/map/timeline.scss
@@ -42,6 +42,28 @@
   }
 }
 
+.timelineLabel {
+  transform: translate(7px, 15px);
+
+  text {
+    display: none;
+    @media #{$mq-mobile-large} {
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      -webkit-user-select: none;
+      display: block;
+      fill: $color-4;
+      font-family: $font-family-1;
+      font-size: $font-size-xxs-small;
+      user-select: none;
+    }
+    @media #{$mq-laptop} {
+      font-size: $font-size-xs-small;
+    }
+  }
+}
+
 .timelineFullYear {
   font-weight: bold;
 }
