Change to more visible colors in menu and adjust highlight, 2px zoneMarker

--- a/app/styles/components/submenu.scss
+++ b/app/styles/components/submenu.scss
@@ -31,7 +31,7 @@
         margin-top: -7px;
 
         .title {
-          color: $color-fade-blue;
+          color: $color-button-primary;
           font-family: $font-family-1;
           font-size: $font-size-small;
           font-weight: $font-weight-bold;
