--- a/app/styles/search/search-panel.scss
+++ b/app/styles/search/search-panel.scss
@@ -47,7 +47,7 @@
   width: 100%;
 
   &::-webkit-input-placeholder {
-    color: rgba($color-3, .3);
+    color: $color-button-primary;
     font-weight: $font-weight-normal;
   }
 
