--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -94,6 +94,7 @@ $color-button-primary: $color-31;
 $color-mid-blue: $color-8;
 $color-white: $color-4;
 $color-fade-blue: rgba($color-31, 0.3);
+$color-fade-grey: rgba($color-5, 0.3);
 $color-fishing-hours-timebar: $color-36;
 
 // Layers colors
