--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -120,26 +120,33 @@
 
 .speedIcon {
   cursor: pointer;
-  outline: none;
   fill: $color-highlight;
+  outline: none;
   height: 10px;
   width: 10px;
 }
 
 .pencilIcon {
+  cursor: pointer;
+  fill: $color-button-primary;
   height: 15px;
   width: 15px;
-  fill: $color-button-primary;
 }
 
 .deleteBucketIcon {
+  fill: $color-button-primary;
   height: 15px;
   width: 15px;
-  fill: $color-button-primary;
 }
 
 .pinIcon {
   cursor: pointer;
   height: 16px;
   width: 11px;
+}
+
+.searchIcon {
+  fill: $color-button-primary;
+  height: 15px;
+  width: 15px;
 }
