--- a/app/styles/components/menu-link.scss
+++ b/app/styles/components/menu-link.scss
@@ -36,18 +36,40 @@
 
   .rightIcons {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
 
+    @media #{$mq-mobile-large} {
+      flex-direction: row;
+    }
+
+    &.hasBadge {
+      padding-left: 14px;
+
+      @media #{$mq-mobile-large} {
+        margin-left: 0;
+      }
+    }
+
     .badge {
-      margin-right: 16px;
       color: $color-4;
       font-weight: bold;
-      font-size: $font-size-xs-small;
-      padding: 3px 7px;
-      margin-top: -2px;
       border: 1px solid $color-fade-grey;
       border-radius: 50%;
+
+      font-size: $font-size-tiny;
+      padding: 1px 4px;
+      margin-top: -15px;
+      margin-right: 0;
+      margin-left: 3px;
+
+      @media #{$mq-mobile-large} {
+        margin-right: 14px;
+        font-size: $font-size-xs-small;
+        margin-top: -2px;
+        margin-left: 0;
+        padding: 3px 7px;
+      }
     }
   }
 
