Lighter timeline slider outline

--- a/app/styles/components/map/timeline.scss
+++ b/app/styles/components/map/timeline.scss
@@ -112,7 +112,7 @@
   fill: $color-fishing-hours-timebar;
   fill-opacity: 0.5;
   height: $timebar-height;
-  stroke-width: 2;
+  stroke-width: 1px;
 }
 
 .timelineInnerBrushCircle {
