--- a/app/styles/components/legend.scss
+++ b/app/styles/components/legend.scss
@@ -1,6 +1,6 @@
 @import '../settings';
 
-.leyend {
+.legend {
   display: inline-block;
   position: absolute;
   bottom: 182px;
@@ -12,14 +12,14 @@
   padding-top: 10px;
   padding-bottom: 15px;
   padding-left: 7px;
-  width: $leyend-mobile-width;
+  width: $legend-mobile-width;
 
   @media #{$mq-tablet} {
     padding-left: 15px;
-    width: $leyend-width;
+    width: $legend-width;
   }
 
-  .leyendText {
+  .legendText {
     display: flex;
     justify-content: space-between;
     span {
@@ -34,7 +34,7 @@
     }
   }
 
-  .leyendOvals {
+  .legendOvals {
     display: flex;
     margin: 10px;
 
