Red color was missing and filter modal color picker id

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -102,8 +102,8 @@ $color-fishing-hours-timebar: $color-36;
 $yellow: #FBFF8B;
 $light-blue: #67FBFE;
 $purple: #7D84FA;
-$purple: #7D84FA;
-$orange: #CC4E4E;
+$red: #CC4E4E;
+$orange: #EC6C33;
 $pink: #CC68C4;
 
 // Colors to review
