--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -87,6 +87,7 @@ $color-33: #000f35;
 $color-34: #99d3e1;
 $color-35: #153b78;
 $color-36: #0A1E50;
+$color-37: #ffbcc6;
 
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
@@ -100,6 +101,8 @@ $color-white: $color-4;
 $color-fade-blue: rgba($color-31, 0.3);
 $color-fade-grey: rgba($color-5, 0.3);
 $color-fishing-hours-timebar: $color-36;
+$color-red: red;
+$color-salmon: $color-37;
 
 // Layer colors
 
