--- a/app/styles/components/miniGlobe.scss
+++ b/app/styles/components/miniGlobe.scss
@@ -15,6 +15,10 @@
 
   @media #{$mq-tablet} {
     width: $legend-width;
+
+    &._isEmbedded {
+      width: $legend-mobile-width;
+    }
   }
 
   .zone {
