--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -22,6 +22,8 @@ $header-height: 95px;
 $mobile-height: 60px;
 $vessel-info-height: 70px;
 
+$submenu-header-height: 76px;
+
 $map-panels-width: 320px;
 $legend-width: 173px;
 $legend-mobile-width: 113px;
