--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -19,7 +19,7 @@ $menu-mobile-right-padding: 30px;
 
 $header-height-mobile: 60px;
 $header-height: 95px;
-$mobile-height: 60px;
+$mobile-height: 70vh;
 $vessel-info-height: 70px;
 
 $submenu-header-height: 76px;
