--- a/app/styles/search/search-panel.scss
+++ b/app/styles/search/search-panel.scss
@@ -104,8 +104,10 @@
     }
 
     @media #{$mq-tablet} {
-      max-width: 320px;
-      top: 42px;
+      position: relative;
+      top: -1px;
+      margin-left: -30px;
+      width: 320px;
     }
   }
 }
