--- a/app/styles/components/mobile-left-expand.scss
+++ b/app/styles/components/mobile-left-expand.scss
@@ -7,15 +7,15 @@
     display: inline-block;
     position: absolute;
     left: 0px;
-    bottom: 108px;
-    height: 150px;
+    bottom: 110px;
+    height: 70px;
     background-color: $color-secondary;
     color: $color-white;
     width: 30px;
 
     .arrow {
-      margin-top: 70px;
-      margin-left: 4px;
+      margin-top: 30px;
+      margin-left: 6px;
       @include arrow(12px, 2px, $color-button-primary, 'right');
     }
   }
@@ -25,8 +25,12 @@
       transform: translateX(113px);
       margin-left: 0;
       animation: slideLeft 0.4s ease-in;
+      @media #{$mq-tablet} {
+        transform: translateX(173px);
+      }
+
       .arrow {
-        margin-left: 10px;
+        margin-left: 12px;
         transform: rotate(225deg);
       }
     }
