Add more colors

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -105,10 +105,13 @@ $color-fishing-hours-timebar: $color-36;
 
 $yellow: #FBFF8B;
 $light-blue: #67FBFE;
-$purple: #7D84FA;
-$red: #CC4E4E;
-$orange: #EC6C33;
-$pink: #CC68C4;
+$lime: #d2ed07;
+$green: #66BC29;
+$blue: #7D84FA;
+$purple: #bb00ff;
+$red: #ff3b00;
+$orange: #F95E5E;
+$pink: #FF81F5;
 
 // Colors to review
 $color-14: #2d3a57;
