Change colors to differenciate them better. Default vessel color is now shown

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -105,11 +105,12 @@ $color-fishing-hours-timebar: $color-36;
 
 $yellow: #FBFF8B;
 $light-blue: #67FBFE;
-$lime: #d2ed07;
-$green: #66BC29;
+$green: #337a00;
+$brightGreen: #00ff6a;
+
 $blue: #7D84FA;
 $purple: #bb00ff;
-$red: #ff3b00;
+$peach: #ffc081;
 $orange: #F95E5E;
 $pink: #FF81F5;
 
