--- a/app/styles/components/shared/color-picker.scss
+++ b/app/styles/components/shared/color-picker.scss
@@ -9,8 +9,8 @@
   background-color: $light-blue;
 }
 
-.lime {
-  background-color: $lime;
+.brightGreen {
+  background-color: $brightGreen;
 }
 
 .green {
@@ -25,8 +25,8 @@
   background-color: $purple;
 }
 
-.red {
-  background-color: $red;
+.peach {
+  background-color: $peach;
 }
 
 .orange {
