Adjust colors to make them more recognizable

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -105,12 +105,12 @@ $color-fishing-hours-timebar: $color-36;
 
 $yellow: #FBFF8B;
 $light-blue: #67FBFE;
-$green: #337a00;
+$green: #abff35;
 $brightGreen: #00ff6a;
 
 $blue: #7D84FA;
 $purple: #bb00ff;
-$peach: #ffc081;
+$peach: #fca26f;
 $orange: #F95E5E;
 $pink: #FF81F5;
 
