--- a/app/styles/components/miniGlobe.scss
+++ b/app/styles/components/miniGlobe.scss
@@ -10,14 +10,6 @@
   background-color: $color-base;
   width: $legend-mobile-width;
 
-  @media #{$mq-tablet} {
-    width: $legend-width;
-
-    &._isEmbedded {
-      width: $legend-mobile-width;
-    }
-  }
-
   .zone {
     color: $color-white;
     font-size: $font-size-xs-small;
@@ -26,9 +18,9 @@
   }
 
   .svgContainer {
-    width: 50px;
-    height: 50px;
-    margin-left: 33%;
+    width: 40px;
+    height: 40px;
+    margin-left: 19px;
     margin-top: 10px;
     display: flex;
     justify-content: center;
