--- a/app/styles/components/shared/color-picker.scss
+++ b/app/styles/components/shared/color-picker.scss
@@ -44,6 +44,8 @@
 .colorPicker {
   .title {
     margin-bottom: 5px;
+    font-size: $font-size-x-small;
+    font-weight: $font-weight-light-bold;
   }
 
   input[type="radio"] {
