do not allow saving when no layers or no filters elected

--- a/app/styles/components/button.scss
+++ b/app/styles/components/button.scss
@@ -26,6 +26,10 @@
     color: $color-4;
   }
 
+  &._disabled._filled {
+    background-color: rgba($color-button-primary, .3);
+  }
+
   &._big {
     height: 40px;
   }
@@ -105,5 +109,3 @@
     }
   }
 }
-
-
