Fix hue filter tooltip problem

--- a/app/styles/components/map/layer-blending.scss
+++ b/app/styles/components/map/layer-blending.scss
@@ -13,7 +13,10 @@
   font-family: $font-family-1;
   font-size: $font-size-xxs-small;
   max-height: none;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   position: absolute;
   right: -30px;
   text-transform: uppercase;
