--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -101,13 +101,12 @@ $color-fade-blue: rgba($color-31, 0.3);
 $color-fade-grey: rgba($color-5, 0.3);
 $color-fishing-hours-timebar: $color-36;
 
-// Layers colors
+// Layer colors
 
 $yellow: #FBFF8B;
 $light-blue: #67FBFE;
 $green: #abff35;
 $brightGreen: #00ff6a;
-
 $blue: #7D84FA;
 $purple: #bb00ff;
 $peach: #fca26f;
