--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -84,6 +84,13 @@
   width: 10px;
 }
 
+.iconArrowLink {
+  cursor: pointer;
+  fill: $color-button-primary;
+  height: 15px;
+  width: 15px;
+}
+
 .infoIcon {
   cursor: pointer;
   fill: $color-button-primary;
