--- a/app/styles/components/map/map-footer.scss
+++ b/app/styles/components/map/map-footer.scss
@@ -75,7 +75,7 @@
   justify-content: space-between;
 
   @media #{$mq-tablet} {
-    max-width: 425px;
+    max-width: 470px;
     width: 100%;
   }
 
@@ -127,4 +127,18 @@
 .overflowContainer {
   height: $map-footer-height;
   overflow: hidden;
+}
+
+.betaPill {
+  display: none;
+
+  @media #{$mq-mobile-large} {
+    background: $color-mid-blue;
+    border-radius: 99px;
+    color: $color-white;
+    display: inline-block;
+    font-size: $font-size-tiny;
+    margin-left: 10px;
+    padding: 2px 8px;
+  }
 }
