fixed embedded mode logo/leftpanel positioning

--- a/app/styles/components/shared/header.scss
+++ b/app/styles/components/shared/header.scss
@@ -221,6 +221,9 @@
       @media #{$mq-tablet} {
         order: 1;
       }
+      &._isEmbedded {
+        margin: 0;
+      }
     }
 
     .shareHeader {
