--- a/app/styles/components/map/modal.scss
+++ b/app/styles/components/map/modal.scss
@@ -78,16 +78,21 @@
 }
 
 
-.wrapper{
-    padding-bottom: 40px;
+.wrapper:not(:last-child) {
+  padding-bottom: 40px;
 }
 
 .footerContainer {
   display: flex;
   justify-content: center;
-  margin: 10px 0 0;
+  margin: 20px 0 0;
 
   > .mainButton {
     width: 180px;
   }
+}
+
+.warning {
+  margin-top: 10px;
+  padding: 5px 10px 12px;
 }
