Revert "Merge branch 'develop' into master"
This reverts commit 4aece5fd6b89ea8c0905cc50616f89aee9bd9a57, reversing
changes made to 3a1d83023ef754d6b7e8175727ec89b495d39881.

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -101,12 +101,13 @@ $color-fade-blue: rgba($color-31, 0.3);
 $color-fade-grey: rgba($color-5, 0.3);
 $color-fishing-hours-timebar: $color-36;
 
-// Layer colors
+// Layers colors
 
 $yellow: #FBFF8B;
 $light-blue: #67FBFE;
 $green: #abff35;
 $brightGreen: #00ff6a;
+
 $blue: #7D84FA;
 $purple: #bb00ff;
 $peach: #fca26f;
