fixed logo (fixes #815)

--- a/app/styles/components/shared/header.scss
+++ b/app/styles/components/shared/header.scss
@@ -54,6 +54,10 @@
       display: inline-block;
       margin-right: 0;
       width: auto;
+
+      img {
+        margin-top: 11px;
+      }
     }
   }
 
@@ -206,7 +210,7 @@
     }
 
     .appLogo {
-      margin-left: 25px;
+      margin-left: 15px;
       order: 2;
       @media #{$mq-tablet} {
         order: 1;
