--- a/app/styles/components/map.scss
+++ b/app/styles/components/map.scss
@@ -17,14 +17,11 @@
     color: rgba($color-4, .7);
     display: block;
     font-size: $font-size-xxs-small;
-    left: 24px;
+    font-weight: bold;
+    left: 56px;
     position: absolute;
-    top: 100px;
+    top: 112px;
     z-index: 99;
-  }
-
-  @media #{$mq-desktop} {
-    left: 16px;
   }
 }
 
@@ -70,16 +67,16 @@
   z-index: 6;
 
   @media #{$mq-tablet} {
-    left: 16px;
-    top: 266px;
+    left: 6px;
+    top: 250px;
   }
 
   &._isEmbedded {
-    left: 16px;
+    left: 6px;
     top: 110px;
 
     @media #{$mq-tablet} {
-      top: 219px;
+      top: 204px;
     }
   }
 }
@@ -88,15 +85,11 @@
   display: none;
 
   @media #{$mq-tablet} {
-    top: 125px;
-    left: 16px;
     display: block;
+    left: 6px;
     position: absolute;
+    top: 112px;
     z-index: 6;
-  }
-
-  @media #{$mq-desktop} {
-    bottom: 135px;
   }
 
   > .control {
@@ -112,7 +105,7 @@
     text-align: center;
 
     &:not(:first-child) {
-      margin: 3px 0 0;
+      margin: 2px 0 0;
     }
 
     &._disabled {
