filter group vertical layout, fixes #838

--- a/app/styles/components/map/modal.scss
+++ b/app/styles/components/map/modal.scss
@@ -10,24 +10,48 @@
 .optionsContainer {
   display: flex;
   flex-basis: 100%;
-  justify-content: space-between;
   flex-direction: column;
+  justify-content: space-between;
   margin-top: 20px;
-
-  @media #{$mq-tablet} {
-    flex-direction: row;
-    margin-top: 40px;
-    flex-basis: calc(50% - 13px);
-  }
 }
 
-.column {
+.section {
   display: flex;
   flex-direction: column;
   width: 100%;
+}
 
-  @media #{$mq-tablet} {
-    margin-right: 45px;
+.section,
+._bottomPadding {
+  padding-bottom: 40px;
+}
+
+.foldableAction {
+  cursor: pointer;
+
+  &::after {
+    content: '▾';
+    margin-left: 10px;
+    transform: rotateZ(180deg);
+  }
+
+  &._closed {
+    &::after {
+      transform: rotateZ(0deg);
+    }
+  }
+}
+
+.foldable {
+  height: auto;
+  max-height: 200px;
+  overflow: hidden;
+  transition: all .4s;
+
+  &._closed {
+    height: 0;
+    max-height: 0;
+    padding: 0;
   }
 }
 
@@ -77,8 +101,8 @@
 }
 
 
-.wrapper{
-    padding-bottom: 40px;
+.wrapper {
+  padding-bottom: 40px;
 }
 
 .footerContainer {
